--- a/organizacoes/templates/organizacoes/seleciona_conexoes.html
+++ b/organizacoes/templates/organizacoes/seleciona_conexoes.html
@@ -131,11 +131,11 @@
     </select>
     <br><br><br>
 
-    <small><button onclick="location.href='{% url "cadastrar_usuario" %}?tipo=parceiro&organizacao={{projeto.organizacao.id}}'" type="button" style="float: right;">
+    <small><button class="btn btn-light btn-sm" onclick="location.href='{% url "cadastrar_usuario" %}?tipo=parceiro&organizacao={{projeto.organizacao.id}}'" type="button" style="float: right;">
       Cadastrar Novo Parceiro
     </button></small>
 
-    <input type="submit" value="Fechar Conexões">
+    <input type="submit" class="btn btn-primary" value="Fechar Conexões">
 
     &nbsp;&nbsp;
 
