--- a/professores/templates/professores/avaliar_entregas.html
+++ b/professores/templates/professores/avaliar_entregas.html
@@ -20,6 +20,12 @@
 
   <style>
     ul {margin-bottom: 6px;}
+    .pintern {
+      border: 1px solid grey;
+      padding: 0.2em; display:block;
+      margin: 10px 0px 4px 0px;
+      background-color: #FAFAF3;
+    }
   </style>
 {% endblock %}
 
@@ -60,7 +66,7 @@
 
             {% for item in entregas %}
             {% with dias_ate=item.evento.endDate|dif_dias_hoje dias=14 %} {% comment %} Eventos são mostrados duas semanas antes do prazo {% endcomment %}
-              <div style="border: 1px solid grey; margin: {% if forloop.first %}0{% else %}10{% endif %}px 0px 4px 0px; padding: 0.2em; display:block;"> {% comment %} {% if dias_ate > dias %}{% endif %} {% endcomment %}
+              <div class="pintern" style="margin-top: {% if forloop.first %}0{% else %}10{% endif %}px;"> {% comment %} {% if dias_ate > dias %}{% endif %} {% endcomment %}
                 <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>
                   <b>{{item.composicao.exame.titulo}}</b>
                   <span class="opt_full">[prazo {{ item.evento.endDate|date:"DATE_FORMAT" }}]:</span>
@@ -77,7 +83,7 @@
                     {% if documento.documento or documento.link %}
                       <a 
                           {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
-                          class="{% if dias_ate > dias %}lightgrey{% endif %}"
+                          {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}
                           {% if documento.usuario and not item.composicao.exame.grupo %}
                             href="{% url 'entrega_avaliar' item.composicao.id projeto.id documento.usuario.id %}"
                           {% else %}
@@ -96,7 +102,7 @@
                     {% if forloop.first%}</b>{% endif %}  
                   </li>
                 {% empty %}
-                  Arquivos ausentes<br>
+                  <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>Arquivos ausentes</span><br>
                 {% endfor %}
                 </ul>
 
