--- a/professores/templates/professores/avaliar_entregas.html
+++ b/professores/templates/professores/avaliar_entregas.html
@@ -26,6 +26,12 @@
       margin: 10px 0px 4px 0px;
       background-color: #FAFAF3;
     }
+    .lightgrey,
+    .lightgrey:link,
+    .lightgrey:visited,
+    .lightgrey:hover,
+    .lightgrey:active
+      {color:lightgrey;}
   </style>
 {% endblock %}
 
@@ -83,7 +89,7 @@
                     {% if documento.documento or documento.link %}
                       <a 
                           {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
-                          {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}
+                          {% if dias_ate > dias %}class="lightgrey"{% endif %}
                           {% if documento.usuario and not item.composicao.exame.grupo %}
                             href="{% url 'entrega_avaliar' item.composicao.id projeto.id documento.usuario.id %}"
                           {% else %}
@@ -106,58 +112,7 @@
                 {% endfor %}
                 </ul>
 
-                {% if item.avaliacoes %}
-                <div style="display: table;">
-                  <table style="border: 0px; border-collapse: separate; border-spacing: 10px; width: 100%;">
-                    <tr>
-                      <td style="padding: 0.4em; background-color: lightgrey; border: 0px; vertical-align: top;">
-                        {% if item.avaliacoes.last.objetivo %}
-                          <b>Avaliação:</b><br>
-                          <ul>
-                          {% for avaliacao in item.avaliacoes %}
-                            <li style="margin-left: -1.9em; white-space: nowrap; list-style-type: '&#8227; ';">
-                              {% if avaliacao.objetivo %}
-                                {{avaliacao.objetivo.titulo}}:
-                                {% comment %} {{avaliacao.objetivo.sigla}}: {% endcomment %}
-                              {% else %}
-                                Objetivo não definido 
-                              {% endif %}
-                              {{avaliacao.get_conceito}}
-                            </li>
-                          {% endfor %}
-                          </ul>
-                          <b>Nota = {{item.nota|floatformat:2}}  </b>
-                        {% else %}
-                          <b>Decisão:</b><br>
-                          &#8227;
-                          {% if avaliacao.nota > 5 %}
-                            Adequado
-                          {% else %}
-                            Inadequado
-                          {% endif %}
-                        {% endif %}
-                      </td>
-
-                      {% if item.observacao.observacoes_estudantes or item.observacao.observacoes_orientador%}
-                        <td style="padding: 0.4em; background-color: lightgrey; border: 0px; vertical-align: top;">
-                          {% if item.observacao.observacoes_estudantes %}
-                            <b>Observações para Estudantes:</b><br>
-                            {{item.observacao.observacoes_estudantes}}<br>
-                            {% if item.observacao.observacoes_orientador %} 
-                              <br>
-                            {% endif %}
-                          {% endif %}
-                          {% if item.observacao.observacoes_orientador %} 
-                            <b>Observações do Orientador:</b><br>
-                            {{item.observacao.observacoes_orientador}}
-                          {% endif %}
-                        </td>
-                      {% endif %}
-
-                    </tr>
-                  </table>
-                </div>
-                {% endif %}
+                {% include "display_avaliacoes.html" with com_orientador=True %}
 
               </div>
             {% endwith %}
