--- a/estudantes/templates/estudantes/estudante_feedback.html
+++ b/estudantes/templates/estudantes/estudante_feedback.html
@@ -152,7 +152,7 @@
 
       <br><br><br>
       {% if not feedback %}
-        <input class="btn btn-secondary" type="submit" value="Enviar">
+        <input class="btn btn-primary" type="submit" value="Enviar">
       {% endif %}
 
     </div>
