--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -215,19 +215,14 @@
     </div>
 
     <script>
-      function carrega_pagina() {
-      };
-      
+      function carrega_pagina() {};
       function carrega_site() {
         var filterEdicao = localStorage.getItem("filterEdicao");
         if (filterEdicao !== null && $("#filterEdicao option[value='"+filterEdicao+"']").length > 0 ) {
           $('#filterEdicao').val(filterEdicao).trigger('change');
         }
-        carrega_pagina();
       };
-
       window.onload = carrega_site
-
     </script>
 
   </div>
