--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -184,13 +184,15 @@
             </a>
             <br>
             
-            <a style="color:black" href="{% url 'edita_notas' alocado.id %}">
+            {% if user.tipo_de_usuario == 4 %}
+                <a style="color:black" href="{% url 'edita_notas' alocado.id %}">
+            {% endif %}
               {% if alocado.get_notas %}
                 Notas: 
                 {% for aval, nota, peso, descr in alocado.get_notas %}
                   <span style="background-color:#eef;" data-toggle="tooltip" data-html="true" animation="true" 
-                   title="{{descr}}">
-                    {{aval}}({{peso|floatformat:3}}%)={{nota|floatformat:1}}
+                   title="{{descr}} | peso={{peso|floatformat:3}}%">
+                    {{aval}}={% if peso > 0 %}{{nota|floatformat:1}}{% else %}{% if nota > 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
                   </span>
                 {% endfor %}
                 &nbsp;|
@@ -213,7 +215,10 @@
                     </span>
                 {% endif %}
               {% endwith %}
-            </a>
+
+            {% if user.tipo_de_usuario == 4 %}
+                </a>
+            {% endif %}
 
             {% if alocado.peso > 0 %}
                 <div class="table-responsive">
